# clRL

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
clRL/: CMakeLists.txt  clRL.cpp  clRL.h
clRL/include/: clRL.h  clRL.opencl
cmake/: CLRLConfig.cmake.in  clRLConfig.cmake.in
include/CLRL/: clRL.hpp  clRL.opencl
src/: clRL.cpp
